# hitheer-server

./: .firebaserc  .gitignore  DEPLOY.md  README.md  firestore.rules  package.json  pnpm-lock.yaml
apps/signaling/: .dockerignore  .env.example  Cargo.toml  Dockerfile  cloudbuild.build.yaml  cloudbuild.yaml
apps/signaling/src/: auth.rs  conversations.rs  db.rs  main.rs  matching.rs  protocol.rs  realtime.rs  rooms.rs  turn.rs  usage.rs  ws.rs
apps/web/: .env.local.example  apphosting.yaml  next.config.mjs  package.json  pnpm-lock.yaml
apps/web/src/app/: globals.css  layout.tsx  page.tsx
apps/web/src/app/about/: page.tsx
apps/web/src/app/friends/: page.tsx
apps/web/src/app/history/: page.tsx
apps/web/src/app/match/: page.tsx
apps/web/src/app/pricing/: page.tsx
apps/web/src/app/privacy/: page.tsx
apps/web/src/app/profile/: page.tsx
apps/web/src/app/signin/: page.tsx
apps/web/src/app/signup/: page.tsx
apps/web/src/app/terms/: page.tsx
apps/web/src/components/: invitation-listener.tsx  language-settings.tsx  plan-card.tsx
apps/web/src/components/mobile/: frame.tsx  history.tsx  home.tsx  profile.tsx  promo.tsx
apps/web/src/lib/: account-pill.tsx  auth-context.tsx  auth-ui.tsx  billing.ts  client-id.ts  conversations.ts  firebase-admin.ts  firebase.ts  friends.ts  glossary.ts  languages.ts  peer.ts  protocol.ts  realtime.ts  signaling.ts  stripe-server.ts  use-is-mobile.ts
infra/: docker-compose.yml  render-coturn.sh
infra/coturn/: DEPLOY-GCE.md  turnserver.conf
scripts/: setup-env.sh  setup-stripe.sh  sync-plan.mjs
(+10 files in other folders)
