[package]
name = "hithere-signaling"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["ws", "macros"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5", features = ["cors", "trace"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dashmap = "6"
uuid = { version = "1", features = ["v4"] }
futures-util = "0.3"
anyhow = "1.0.102"
hmac = "0.12"
sha1 = "0.10"
base64 = "0.22"
redis = { version = "0.27", features = ["tokio-comp", "connection-manager", "tls-rustls", "tls-rustls-webpki-roots", "tokio-rustls-comp"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
dotenvy = "0.15"
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "sqlite", "macros"] }
jsonwebtoken = "9"
tokio-util = "0.7"
thiserror = "1"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
rand = "0.8"

[[bin]]
name = "hithere-signaling"
path = "src/main.rs"
